Fix swagger, refactor code
